--- a/public/terms.html
+++ b/public/terms.html
@@ -6,6 +6,6 @@
   <p><strong>最終更新：</strong> 2025年10月27日</p>
   <hr>
   <p><strong>1. 利用範囲</strong><br>Pi Networkエコシステム内でのみ使用可能。</p>
-  <p><strong>2. 有料機能</strong><br>プレミアムテーマ：1 Pi。返金は購入後24時間以内。</p>
+  <p><strong>2. アプリ料金</strong><br>アプリ本体：3 Pi（1回払い）。返金は購入後24時間以内。</p>
   <p><strong>3. 責任</strong><br>Pi Network利用規約に準拠。開発者は取引仲介しません。</p>
 </body></html>
