--- a/public/privacy.html
+++ b/public/privacy.html
@@ -2,8 +2,8 @@
 <html><head><title>プライバシーポリシー - Pi Calendar</title></head>
 <body style="font-family:sans-serif;padding:20px;">
   <h1>プライバシーポリシー</h1>
-  <p><strong>アプリ名：</strong> Pi Calendar</p>
-  <p><strong>開発者：</strong> [君のPiユーザー名]</p>
+  <p><strong>アプリ名：</strong> Zen Verse Flip vol.1</p>
+  <p><strong>開発者：</strong> Yuki36963</p>
   <p><strong>最終更新：</strong> 2025年10月27日</p>
   <hr>
   <p><strong>1. 個人情報の収集</strong><br>一切収集しません。Pi SDK経由のウォレットアドレスは決済時のみ使用。</p>
