--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
     <script>
       // SDK 初期化
-      Pi.init({ version: "2.0", sandbox: false });
+      Pi.init({ version: "2.0", sandbox: true });
 
       async function buyApp() {
         if (!window.Pi) {
