--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       Pi.init({ version: "2.0", sandbox: true });
 
       /*
-      // 決済処理関数をコメントアウト
+      // 決済処理関数はコメントアウト
       async function buyApp() {
         if (!window.Pi) {
           alert("Please open this in Pi Browser");
