--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,34 @@
     </style>
   </head>
   <body>
-    <!-- React が描画するエリア -->
-    <div id="root"></div>
-
-    <!-- 下部固定バナー広告枠 -->
-    <div id="banner-ad">ここにバナー広告が表示されます</div>
+    <!-- 元の決済ボタンはコメントアウト -->
+    <!--
+    <div style="text-align:center; margin:100px;">
+      <button onclick="buyApp()" style="padding:20px 40px; font-size:24px; background:#f0a500; color:white; border:none; border-radius:12px;">
+        Open your Zen world for 3 Pi
+      </button>
+    </div>
+    -->
 
     <!-- Pi SDK は残す -->
     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
     <script>
       Pi.init({ version: "2.0", sandbox: true });
+
+      // 仮のバナー広告表示
+      window.addEventListener('DOMContentLoaded', () => {
+        const banner = document.getElementById('banner-ad');
+        if (banner) {
+          banner.textContent = 'ここにバナー広告が表示されます';
+          // 実際の広告コードに差し替え可能
+        }
+      });
     </script>
+
+    <!-- 既存の操作ボタンや日めくりUIはここでレンダリングされる -->
+    <div id="root"></div>
+
+    <!-- 下部固定バナー広告枠 -->
+    <div id="banner-ad"></div>
   </body>
 </html>
