--- a/public/privacy.html
+++ b/public/privacy.html
@@ -7,6 +7,8 @@
   <p><strong>最終更新：</strong> 2025年10月27日</p>
   <hr>
   <p><strong>1. 個人情報の収集</strong><br>一切収集しません。Pi SDK経由のウォレットアドレスは決済時のみ使用。</p>
-  <p><strong>2. Pi決済</strong><br>Pi Network公式SDKを使用。取引はPiブロックチェーンに記録。</p>
+  <p><strong>2. Pi決済</strong><br>
+Pi Network公式SDKを使用。取引はPiブロックチェーンに記録。<br>
+※この無料版ではユーザーからのPi決済は発生しません。</p>
   <p><strong>3. 連絡先</strong><br>Piアプリ内Chatで[君のPiユーザー名]まで。</p>
 </body></html>
