--- a/public/terms.html
+++ b/public/terms.html
@@ -2,10 +2,10 @@
 <html><head><title>利用規約 - Pi Calendar</title></head>
 <body style="font-family:sans-serif;padding:20px;">
   <h1>利用規約</h1>
-  <p><strong>アプリ名：</strong> Pi Calendar</p>
-  <p><strong>最終更新：</strong> 2025年10月27日</p>
+  <p><strong>アプリ名：</strong> Zen Verse Flip vol.1</p>
+  <p><strong>最終更新：</strong> 2025年10月29日</p>
   <hr>
-  <p><strong>1. 利用範囲</strong><br>Pi Networkエコシステム内でのみ使用可能。</p>
-  <p><strong>2. アプリ料金</strong><br>アプリ本体：3 Pi（1回払い）。返金は購入後24時間以内。</p>
-  <p><strong>3. 責任</strong><br>Pi Network利用規約に準拠。開発者は取引仲介しません。</p>
+  <p><strong>1. 利用範囲</strong><br>Pi Networkエコシステム内でのみ使用可能です。</p>
+  <p><strong>2. アプリ料金</strong><br>本アプリは無料で提供されます。広告バナーが表示される場合があります。</p>
+  <p><strong>3. 責任</strong><br>本アプリの利用に関して、開発者は一切の損害責任を負いません。Pi Network利用規約に従ってください。</p>
 </body></html>
