--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
   <body>
 
     <!-- Pi SDK は残す -->
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-    <script>
-      Pi.init({ version: "2.0" });
-
+ 　  <script src="https://sdk.pi-apps.io/pi-sdk.js"></script>
+　　　<script>
+   　 window.Pi.init({ version: "2.0" });
+　　　</script>
       // 認証関数（paymentsスコープで決済許可をもらう）
       async function authenticateUser() {
         if (!window.Pi) {
@@ -119,6 +119,6 @@
     alert("予期せぬエラー: " + e.message);
   }
 }
-} 
+  </script>
   </body>
 </html>
