--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
   <body>
 
     <!-- Pi SDK は残す -->
- 　  <script src="https://sdk.pi-apps.io/pi-sdk.js"></script>
-　　　<script>
-   　 window.Pi.init({ version: "2.0" });
-　　　</script>
+ 　  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+    <script>
+　　  window.Pi.init({ version: "2.0", sandbox: true });
+    </script>
       // 認証関数（paymentsスコープで決済許可をもらう）
       async function authenticateUser() {
         if (!window.Pi) {
@@ -97,9 +97,11 @@
           // 0 Piは自動承認されるので何もしない
         },
 
-        onReadyForServerCompletion(paymentId, txid) {
-          console.log("無料決済完了！Checklistが緑になります");
-          alert("決済成功！\nポータルに戻ってChecklistを確認してください！");
+onReadyForServerCompletion: function(paymentId, txid) {
+  console.log("無料決済完了！", paymentId, txid);
+  Pi.completePayment(paymentId, txid);
+  alert("決済成功！ポータルに戻ってChecklistを確認してください！");
+},
           // ← ここで日めくりを表示したいなら君の関数呼び出しを追加
           // 例：showTodaysVerse();
         },
