--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
     <!-- Pi SDK は残す -->
  　  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
     <script>
-　　  window.Pi.init({ version: "2.0", sandbox: true });
-    </script>
+ 　　 window.Pi.init({ version: "2.0" });
+　　 </script>
       // 認証関数（paymentsスコープで決済許可をもらう）
       async function authenticateUser() {
         if (!window.Pi) {
