--- a/public/index.html
+++ b/public/index.html
@@ -1,127 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Zen Verse Flip</title>
-    <style>
-      body { margin: 0; padding: 0 0 100px; font-family: sans-serif; text-align: center; }
-      #banner-ad {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 60px;
-        background: #eee;
-        line-height: 60px;
-        border-top: 1px solid #ccc;
-        z-index: 100;
-      }
-    </style>
-  </head>
-  <body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Zen Verse Flip</title>
+    <style>
+      body { margin: 0; padding: 0 0 100px; font-family: sans-serif; text-align: center; }
+      #banner-ad {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+        background: #eee;
+        line-height: 60px;
+        border-top: 1px solid #ccc;
+        z-index: 100;
+      }
+    </style>
+  </head>
+  <body>
 
-    <!-- Pi SDK は残す -->
- 　  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-    <script>
- 　　// index.html の書き換え後のコード
-Pi.init({ version: "2.0", api_key: "zenverseflipvola9193" });
-　　 </script>
-      // 認証関数（paymentsスコープで決済許可をもらう）
-      async function authenticateUser() {
-        if (!window.Pi) {
-          alert("Pi Browserで開いてください！");
-          return false;
-        }
-        try {
-          const scopes = ['payments']; // 決済スコープ必須！
-          await Pi.authenticate(scopes, onIncompletePaymentFound);
-          console.log("認証成功！決済OK！");
-          return true;
-        } catch (error) {
-          alert("認証エラー: " + error.message);
-          console.error(error);
-          return false;
-        }
-      }
+        <script src="https://sdk.minepi.com/pi-sdk.js"></script>
 
-      // 未完了決済のコールバック（Pi SDK必須）
-      function onIncompletePaymentFound(payment) {
-        console.log("未完了決済発見:", payment);
-        // テストなので何もしない
-      }
+        <script>
+      
+      // App Studioで取得した新しいApp IDを設定
+      Pi.init({ version: "2.0", api_key: "zenverseflipvola9193" });
 
-      // 仮のバナー広告表示
-      window.addEventListener('DOMContentLoaded', () => {
-        const banner = document.getElementById('banner-ad');
-        if (banner) {
-          banner.textContent = 'ここにバナー広告が表示されます';
-        }
-        // ページロード時に自動認証
-        authenticateUser();
-      });
-    </script>
+            async function authenticateUser() {
+        if (!window.Pi) {
+          alert("Pi Browserで開いてください！");
+          return false;
+        }
+        try {
+          const scopes = ['payments']; // 決済スコープ必須！
+          await Pi.authenticate(scopes, onIncompletePaymentFound);
+          console.log("認証成功！決済OK！");
+          return true;
+        } catch (error) {
+          alert("認証エラー: " + error.message);
+          console.error(error);
+          return false;
+        }
+      }
 
-    <!-- 既存の操作ボタンや日めくりUIはここでレンダリングされる -->
-    <div id="root"></div>
+            function onIncompletePaymentFound(payment) {
+        console.log("未完了決済発見:", payment);
+        // テストなので何もしない
+      }
 
-    <!-- 下部固定バナー広告枠 -->
-    <div id="banner-ad"></div>
+            window.addEventListener('DOMContentLoaded', () => {
+        const banner = document.getElementById('banner-ad');
+        if (banner) {
+          banner.textContent = 'ここにバナー広告が表示されます';
+        }
+        // ページロード時に自動認証
+        authenticateUser();
+      });
+    </script>
 
-    <!-- 手動決済ボタン（一時的・審査用） -->
-    <div style="position:fixed; bottom:80px; left:50%; transform:translateX(-50%); z-index:999; background:rgba(0,0,0,0.7); padding:10px; border-radius:12px;">
-      <button onclick="runTestPayment()" style="padding:12px 24px; background:#5f3dc4; color:white; border:none; border-radius:8px; font-weight:bold; font-size:16px;">
-        決済テスト実行（審査用）
-      </button>
-    </div>
+        <div id="root"></div>
 
-    <script>
-    async function runTestPayment() {
-  if (!window.Pi) {
-    alert("Pi Browserで開いてください！");
-    return;
-  }
+        <div id="banner-ad"></div>
 
-  const authenticated = await authenticateUser();
-  if (!authenticated) return;
+        <div style="position:fixed; bottom:80px; left:50%; transform:translateX(-50%); z-index:999; background:rgba(0,0,0,0.7); padding:10px; border-radius:12px;">
+      <button onclick="runTestPayment()" style="padding:12px 24px; background:#5f3dc4; color:white; border:none; border-radius:8px; font-weight:bold; font-size:16px;">
+        決済テスト実行（審査用）
+      </button>
+    </div>
 
-  try {
-    Pi.createPayment(
-      {
-        amount: 0,                                                   // ← ここを0に！
-        memo: "Zen Verse Flip - 今日の禅の言葉（無料アクセス）",         // ← memo必須
-        metadata: { app: "zen_verse_flip", purpose: "free_daily_access" }  // ← metadata必須
-      },
-      {
-        // これら4つのコールバックは全部書く必要あり（空でもOK）
-        onReadyForServerApproval(paymentId) {
-          console.log("サーバー承認待ち（0 Piなのでほぼ即通過）", paymentId);
-          // 0 Piは自動承認されるので何もしない
-        },
+    <script>
+    async function runTestPayment() {
+  if (!window.Pi) {
+    alert("Pi Browserで開いてください！");
+    return;
+  }
+
+  const authenticated = await authenticateUser();
+  if (!authenticated) return;
+
+  try {
+    Pi.createPayment(
+      {
+        amount: 0,                                                   // ← ここを0に！
+        memo: "Zen Verse Flip - 今日の禅の言葉（無料アクセス）",         // ← memo必須
+        metadata: { app: "zen_verse_flip", purpose: "free_daily_access" }  // ← metadata必須
+      },
+      {
+        // これら4つのコールバックは全部書く必要あり（空でもOK）
+        onReadyForServerApproval(paymentId) {
+          console.log("サーバー承認待ち（0 Piなのでほぼ即通過）", paymentId);
+          // 0 Piは自動承認されるので何もしない
+        },
 
 onReadyForServerCompletion: function(paymentId, txid) {
-  console.log("無料決済完了！", paymentId, txid);
-  Pi.completePayment(paymentId, txid);
-  alert("決済成功！ポータルに戻ってChecklistを確認してください！");
+  console.log("無料決済完了！", paymentId, txid);
+  Pi.completePayment(paymentId, txid);
+  alert("決済成功！ポータルに戻ってChecklistを確認してください！");
 },
-          // ← ここで日めくりを表示したいなら君の関数呼び出しを追加
-          // 例：showTodaysVerse();
-        },
+          // ← ここで日めくりを表示したいなら君の関数呼び出しを追加
+          // 例：showTodaysVerse();
+        },
 
-        onCancel(paymentId) {
-          console.log("キャンセルされました", paymentId);
-          alert("無料アクセスを許可してください");
-        },
+        onCancel(paymentId) {
+          console.log("キャンセルされました", paymentId);
+          alert("無料アクセスを許可してください");
+        },
 
-        onError(error, payment) {
-          console.error("決済エラー", error);
-          alert("エラー: " + error.message);
-        }
-      }
-    );
-  } catch (e) {
-    alert("予期せぬエラー: " + e.message);
-  }
+        onError(error, payment) {
+          console.error("決済エラー", error);
+          alert("エラー: " + error.message);
+        }
+      }
+    );
+  } catch (e) {
+    alert("予期せぬエラー: " + e.message);
+  }
 }
-  </script>
-  </body>
+    </script>
+  </body>
 </html>
